# pot-app-translate-plugin-papago

./: Cargo.toml  README.md  info.json  main.js
src/: lib.rs
