[package]
name = "plugin"
version = "1.0.0"
authors = ["TechDecryptor"]
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
reqwest = {version="0.11.18",features = ["blocking","json"]}
uuid = {version = "1.5.0",features = ["v4"]}
serde_json = "1.0"
regex = "1.10.2"
chrono = "0.4.31"
base64 = "0.21.5"
hmac = "0.12.1"
md-5 = "0.10.6"

[target.'cfg(target_os = "linux")'.dependencies]
openssl={version="0.10",features=["vendored"]}
